added financial calculator

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="index.html" class="nav-link active">Home</a>
             <a href="basic.html" class="nav-link">Basic Calculator</a>
             <a href="trig.html" class="nav-link">Trigonometric Calculator</a>
+            <a href="financial.html" class="nav-link">Financial Calculator</a>
         </nav>
 
         <main>
@@ -33,7 +34,7 @@
                             </ul>
                         </a>
                         <a href="trig.html" class="calc-card">
-                            <i class="fas fa-square-root-alt"></i>
+                            <i class="fas fa-drafting-compass"></i>
                             <h3>Trigonometric Calculator</h3>
                             <p>Advanced angle calculations and conversions</p>
                             <ul>
@@ -41,6 +42,17 @@
                                 <li>Degree/Radian conversion</li>
                                 <li>Common angle presets</li>
                                 <li>Real-time calculations</li>
+                            </ul>
+                        </a>
+                        <a href="financial.html" class="calc-card">
+                            <i class="fas fa-chart-line"></i>
+                            <h3>Financial Calculator</h3>
+                            <p>Calculate interest and investment returns</p>
+                            <ul>
+                                <li>Simple interest calculation</li>
+                                <li>Compound interest</li>
+                                <li>Multiple compounding frequencies</li>
+                                <li>Quick preset amounts</li>
                             </ul>
                         </a>
                     </div>
@@ -75,7 +87,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2024 MathWiz. All rights reserved.</p>
+            <p>&copy; 2024 MathWiz Calculator. All rights reserved.</p>
         </footer>
     </div>
     <script src="script.js"></script>
