--- a/basic.html
+++ b/basic.html
@@ -12,6 +12,7 @@
             <a href="index.html" class="nav-link">Home</a>
             <a href="basic.html" class="nav-link active">Basic Calculator</a>
             <a href="trig.html" class="nav-link">Trigonometric Calculator</a>
+            <a href="financial.html" class="nav-link">Financial Calculator</a>
         </nav>
 
         <main>
@@ -48,7 +49,12 @@
                 </div>
             </section>
         </main>
+
+        <footer>
+            <p>&copy; 2024 MathWiz Calculator. All rights reserved.</p>
+        </footer>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
