--- a/financial.html
+++ b/financial.html
@@ -91,6 +91,7 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/financial.js"></script>
 </body>
 </html>
