--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <p>&copy; 2024 MathWiz Calculator. All rights reserved.</p>
         </footer>
     </div>
-    <script src="script.js"></script>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
