--- a/trig.html
+++ b/trig.html
@@ -75,6 +75,7 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/trig.js"></script>
 </body>
 </html>
