--- a/basic.html
+++ b/basic.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathWiz - Basic Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -19,7 +20,7 @@
             <section class="calculator-section">
                 <h2>Basic Calculator</h2>
                 <div class="calculator-container">
-                    <div class="basic-calc">
+                    <div class="basic-calc calculator-wrapper">
                         <input type="text" class="calculator-screen" id="basic-result" readonly tabindex="1">
                         <div class="calculator-keys">
                             <button class="btn" data-type="clear">C</button>
