--- a/trig.html
+++ b/trig.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathWiz - Trigonometric Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -18,53 +19,55 @@
         <main>
             <section id="trig" class="calculator-section">
                 <h2>Trigonometric Calculator</h2>
-                <div class="calculator-container trig-calc">
-                    <div class="angle-input">
-                        <div class="unit-toggle">
-                            <label class="switch">
-                                <input type="checkbox" id="angle-unit" tabindex="1">
-                                <span class="slider round"></span>
-                            </label>
-                            <span class="unit-label">DEG</span>
+                <div class="calculator-container">
+                    <div class="trig-calc calculator-wrapper">
+                        <div class="angle-input">
+                            <div class="unit-toggle">
+                                <label class="switch">
+                                    <input type="checkbox" id="angle-unit" tabindex="1">
+                                    <span class="slider round"></span>
+                                </label>
+                                <span class="unit-label">DEG</span>
+                            </div>
+                            <label for="angle">Enter Angle:</label>
+                            <input type="number" id="angle" placeholder="0" tabindex="2">
                         </div>
-                        <label for="angle">Enter Angle:</label>
-                        <input type="number" id="angle" placeholder="0" tabindex="2">
-                    </div>
-                    <div class="trig-results">
-                        <div class="result-box">
-                            <label>sin(θ)</label>
-                            <input type="text" id="sin-result" readonly tabindex="3">
+                        <div class="trig-results">
+                            <div class="result-box">
+                                <label>sin(θ)</label>
+                                <input type="text" id="sin-result" readonly tabindex="3">
+                            </div>
+                            <div class="result-box">
+                                <label>cos(θ)</label>
+                                <input type="text" id="cos-result" readonly tabindex="4">
+                            </div>
+                            <div class="result-box">
+                                <label>tan(θ)</label>
+                                <input type="text" id="tan-result" readonly tabindex="5">
+                            </div>
+                            <div class="result-box">
+                                <label>cot(θ)</label>
+                                <input type="text" id="cot-result" readonly tabindex="6">
+                            </div>
+                            <div class="result-box">
+                                <label>sec(θ)</label>
+                                <input type="text" id="sec-result" readonly tabindex="7">
+                            </div>
+                            <div class="result-box">
+                                <label>cosec(θ)</label>
+                                <input type="text" id="cosec-result" readonly tabindex="8">
+                            </div>
                         </div>
-                        <div class="result-box">
-                            <label>cos(θ)</label>
-                            <input type="text" id="cos-result" readonly tabindex="4">
+                        <div class="angle-presets">
+                            <button class="preset-btn" data-angle="0">0°</button>
+                            <button class="preset-btn" data-angle="30">30°</button>
+                            <button class="preset-btn" data-angle="45">45°</button>
+                            <button class="preset-btn" data-angle="60">60°</button>
+                            <button class="preset-btn" data-angle="90">90°</button>
+                            <button class="preset-btn" data-angle="180">180°</button>
+                            <button class="preset-btn" data-angle="270">270°</button>
+                            <button class="preset-btn" data-angle="360">360°</button>
                         </div>
-                        <div class="result-box">
-                            <label>tan(θ)</label>
-                            <input type="text" id="tan-result" readonly tabindex="5">
-                        </div>
-                        <div class="result-box">
-                            <label>cot(θ)</label>
-                            <input type="text" id="cot-result" readonly tabindex="6">
-                        </div>
-                        <div class="result-box">
-                            <label>sec(θ)</label>
-                            <input type="text" id="sec-result" readonly tabindex="7">
-                        </div>
-                        <div class="result-box">
-                            <label>cosec(θ)</label>
-                            <input type="text" id="cosec-result" readonly tabindex="8">
-                        </div>
-                    </div>
-                    <div class="angle-presets">
-                        <button class="preset-btn" data-angle="0">0°</button>
-                        <button class="preset-btn" data-angle="30">30°</button>
-                        <button class="preset-btn" data-angle="45">45°</button>
-                        <button class="preset-btn" data-angle="60">60°</button>
-                        <button class="preset-btn" data-angle="90">90°</button>
-                        <button class="preset-btn" data-angle="180">180°</button>
-                        <button class="preset-btn" data-angle="270">270°</button>
-                        <button class="preset-btn" data-angle="360">360°</button>
                     </div>
                 </div>
             </section>
