added unit converter

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div class="container">
         <nav class="nav-menu">
             <a href="index.html" class="nav-link active">Home</a>
-            <a href="basic.html" class="nav-link">Basic Calculator</a>
-            <a href="trig.html" class="nav-link">Trigonometric Calculator</a>
-            <a href="financial.html" class="nav-link">Financial Calculator</a>
+            <a href="basic.html" class="nav-link">Basic</a>
+            <a href="trig.html" class="nav-link">Trigonometry</a>
+            <a href="financial.html" class="nav-link">Financial</a>
+            <a href="unit.html" class="nav-link">Unit Converter</a>
         </nav>
 
         <main>
@@ -53,6 +54,17 @@
                                 <li>Compound interest</li>
                                 <li>Multiple compounding frequencies</li>
                                 <li>Quick preset amounts</li>
+                            </ul>
+                        </a>
+                        <a href="unit.html" class="calc-card">
+                            <i class="fas fa-exchange-alt"></i>
+                            <h3>Unit Converter</h3>
+                            <p>Convert between different units of measurement</p>
+                            <ul>
+                                <li>Length, Mass, Time</li>
+                                <li>Current, Temperature</li>
+                                <li>Common conversions</li>
+                                <li>Real-time conversion</li>
                             </ul>
                         </a>
                     </div>
