--- a/trig.html
+++ b/trig.html
@@ -11,9 +11,10 @@
     <div class="container">
         <nav class="nav-menu">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="basic.html" class="nav-link">Basic Calculator</a>
-            <a href="trig.html" class="nav-link active">Trigonometric Calculator</a>
-            <a href="financial.html" class="nav-link">Financial Calculator</a>
+            <a href="basic.html" class="nav-link">Basic</a>
+            <a href="trig.html" class="nav-link active">Trigonometry</a>
+            <a href="financial.html" class="nav-link">Financial</a>
+            <a href="unit.html" class="nav-link">Unit Converter</a>
         </nav>
 
         <main>
