--- a/basic.html
+++ b/basic.html
@@ -11,9 +11,10 @@
     <div class="container">
         <nav class="nav-menu">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="basic.html" class="nav-link active">Basic Calculator</a>
-            <a href="trig.html" class="nav-link">Trigonometric Calculator</a>
-            <a href="financial.html" class="nav-link">Financial Calculator</a>
+            <a href="basic.html" class="nav-link active">Basic</a>
+            <a href="trig.html" class="nav-link">Trigonometry</a>
+            <a href="financial.html" class="nav-link">Financial</a>
+            <a href="unit.html" class="nav-link">Unit Converter</a>
         </nav>
 
         <main>
