--- a/unit.html
+++ b/unit.html
@@ -23,19 +23,40 @@
                 <div class="calculator-container">
                     <div class="unit-calc calculator-wrapper">
                         <div class="unit-type-selector">
-                            <button class="btn operator unit-type-btn" data-type="length"><i class="fas fa-ruler"></i> Length</button>
+                            <button class="btn operator unit-type-btn active" data-type="length"><i class="fas fa-ruler"></i> Length</button>
                             <button class="btn operator unit-type-btn" data-type="mass"><i class="fas fa-weight-hanging"></i> Mass</button>
                             <button class="btn operator unit-type-btn" data-type="time"><i class="fas fa-clock"></i> Time</button>
-                            <button class="btn operator unit-type-btn active" data-type="electricity"><i class="fas fa-bolt"></i> Electricity</button>
+                            <button class="btn operator unit-type-btn" data-type="electricity"><i class="fas fa-bolt"></i> Electricity</button>
                             <button class="btn operator unit-type-btn" data-type="temperature"><i class="fas fa-thermometer-half"></i> Temperature</button>
                         </div>
 
                         <div class="sub-type-container">
                             <div class="sub-type-selector">
-                                <button class="btn operator sub-type-btn active" data-subtype="current"><i class="fas fa-bolt"></i> Current</button>
-                                <button class="btn operator sub-type-btn" data-subtype="voltage"><i class="fas fa-plug"></i> Voltage</button>
-                                <button class="btn operator sub-type-btn" data-subtype="power"><i class="fas fa-charging-station"></i> Power</button>
-                                <button class="btn operator sub-type-btn" data-subtype="resistance"><i class="fas fa-wave-square"></i> Resistance</button>
+                                <div class="length-subtypes">
+                                    <div class="subtype-row">
+                                        <button class="btn operator sub-type-btn active" data-subtype="distance"><i class="fas fa-ruler"></i> Distance</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="area"><i class="fas fa-vector-square"></i> Area</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="solidVolume"><i class="fas fa-cube"></i> Solid Volume</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="liquidVolume"><i class="fas fa-tint"></i> Liquid Volume</button>
+                                    </div>
+                                </div>
+                                <div class="time-subtypes" style="display: none;">
+                                    <div class="subtype-row">
+                                        <button class="btn operator sub-type-btn active" data-subtype="standard"><i class="fas fa-clock"></i> Standard</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="speed"><i class="fas fa-tachometer-alt"></i> Speed</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="acceleration"><i class="fas fa-rocket"></i> Acceleration</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="duration"><i class="fas fa-hourglass-half"></i> Duration</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="frequency"><i class="fas fa-wave-square"></i> Frequency</button>
+                                    </div>
+                                </div>
+                                <div class="electricity-subtypes">
+                                    <div class="subtype-row">
+                                        <button class="btn operator sub-type-btn" data-subtype="current"><i class="fas fa-bolt"></i> Current</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="voltage"><i class="fas fa-plug"></i> Voltage</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="power"><i class="fas fa-charging-station"></i> Power</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="resistance"><i class="fas fa-wave-square"></i> Resistance</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
