removed basic, added basic

--- a/financial.html
+++ b/financial.html
@@ -11,8 +11,8 @@
     <div class="container">
         <nav class="nav-menu">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="basic.html" class="nav-link">Basic</a>
             <a href="trig.html" class="nav-link">Trigonometry</a>
+            <a href="matrix.html" class="nav-link">Matrix</a>
             <a href="financial.html" class="nav-link active">Financial</a>
             <a href="unit.html" class="nav-link">Unit Converter</a>
         </nav>
