--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <nav class="nav-menu">
             <a href="index.html" class="nav-link active">Home</a>
-            <a href="basic.html" class="nav-link">Basic</a>
             <a href="trig.html" class="nav-link">Trigonometry</a>
+            <a href="matrix.html" class="nav-link">Matrix</a>
             <a href="financial.html" class="nav-link">Financial</a>
             <a href="unit.html" class="nav-link">Unit Converter</a>
         </nav>
@@ -23,15 +23,15 @@
                     <h1>Welcome to MathWiz</h1>
                     <p class="hero-subtitle">Your Advanced Scientific Calculator Suite</p>
                     <div class="calculator-cards">
-                        <a href="basic.html" class="calc-card">
-                            <i class="fas fa-calculator"></i>
-                            <h3>Basic Calculator</h3>
-                            <p>Perform arithmetic operations with ease</p>
+                        <a href="matrix.html" class="calc-card">
+                            <i class="fas fa-table"></i>
+                            <h3>Matrix Calculator</h3>
+                            <p>Perform advanced matrix operations</p>
                             <ul>
-                                <li>Basic arithmetic operations</li>
-                                <li>Parentheses support</li>
-                                <li>Keyboard input</li>
-                                <li>Clear and backspace</li>
+                                <li>Matrix addition and subtraction</li>
+                                <li>Matrix multiplication</li>
+                                <li>Determinant and inverse</li>
+                                <li>Matrix transpose</li>
                             </ul>
                         </a>
                         <a href="trig.html" class="calc-card">
