renamed script to utils

--- a/financial.html
+++ b/financial.html
@@ -96,7 +96,7 @@
         </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/financial.js"></script>
 </body>
 </html>
