--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
         </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/utils.js"></script>
 </body>
 </html>
