--- a/trig.html
+++ b/trig.html
@@ -79,7 +79,7 @@
         </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/trig.js"></script>
 </body>
 </html>
