--- a/unit.html
+++ b/unit.html
@@ -93,7 +93,7 @@
             <p>&copy; 2024 MathWiz Calculator. All rights reserved.</p>
         </footer>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/unit.js"></script>
 </body>
 </html>
