--- a/unit.html
+++ b/unit.html
@@ -28,6 +28,8 @@
                             <button class="btn operator unit-type-btn" data-type="time"><i class="fas fa-clock"></i> Time</button>
                             <button class="btn operator unit-type-btn" data-type="electricity"><i class="fas fa-bolt"></i> Electricity</button>
                             <button class="btn operator unit-type-btn" data-type="temperature"><i class="fas fa-thermometer-half"></i> Temperature</button>
+                            <button class="btn operator unit-type-btn" data-type="storage"><i class="fas fa-hdd"></i> Digital Storage</button>
+                            <button class="btn operator unit-type-btn" data-type="others"><i class="fas fa-cubes"></i> Others</button>
                         </div>
 
                         <div class="sub-type-container">
@@ -55,6 +57,18 @@
                                         <button class="btn operator sub-type-btn" data-subtype="voltage"><i class="fas fa-plug"></i> Voltage</button>
                                         <button class="btn operator sub-type-btn" data-subtype="power"><i class="fas fa-charging-station"></i> Power</button>
                                         <button class="btn operator sub-type-btn" data-subtype="resistance"><i class="fas fa-wave-square"></i> Resistance</button>
+                                    </div>
+                                </div>
+                                <div class="storage-subtypes" style="display: none;">
+                                    <div class="subtype-row">
+                                        <button class="btn operator sub-type-btn active" data-subtype="binary"><i class="fas fa-microchip"></i> Binary (Base-2)</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="decimal"><i class="fas fa-calculator"></i> Decimal (Base-10)</button>
+                                    </div>
+                                </div>
+                                <div class="others-subtypes" style="display: none;">
+                                    <div class="subtype-row">
+                                        <button class="btn operator sub-type-btn active" data-subtype="pressure"><i class="fas fa-compress-arrows-alt"></i> Pressure</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="density"><i class="fas fa-water"></i> Density</button>
                                     </div>
                                 </div>
                             </div>
