arc trig and force unit

--- a/trig.html
+++ b/trig.html
@@ -58,6 +58,18 @@
                                 <label>cosec(θ)</label>
                                 <input type="text" id="cosec-result" readonly tabindex="8">
                             </div>
+                            <div class="result-box">
+                                <label>arcsin(θ)</label>
+                                <input type="text" id="arcsin-result" readonly tabindex="9">
+                            </div>
+                            <div class="result-box">
+                                <label>arccos(θ)</label>
+                                <input type="text" id="arccos-result" readonly tabindex="10">
+                            </div>
+                            <div class="result-box">
+                                <label>arctan(θ)</label>
+                                <input type="text" id="arctan-result" readonly tabindex="11">
+                            </div>
                         </div>
                         <div class="angle-presets">
                             <button class="preset-btn" data-angle="0">0°</button>
