--- a/unit.html
+++ b/unit.html
@@ -69,6 +69,7 @@
                                     <div class="subtype-row">
                                         <button class="btn operator sub-type-btn active" data-subtype="pressure"><i class="fas fa-compress-arrows-alt"></i> Pressure</button>
                                         <button class="btn operator sub-type-btn" data-subtype="density"><i class="fas fa-water"></i> Density</button>
+                                        <button class="btn operator sub-type-btn" data-subtype="force"><i class="fas fa-fist-raised"></i> Force</button>
                                     </div>
                                 </div>
                             </div>
